--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ html,body{
   width: 16px;
   height: 10px;
   position: absolute;
-  background: #00c4f3;
+  background: #2980b9;
   z-index: 5;
   left: 0;
   right: 0;
@@ -98,7 +98,7 @@ html,body{
 }
 
 .timeline .hexa:before {
-  border-bottom: 4px solid #00c4f3;
+  border-bottom: 4px solid #2980b9;
   border-left-width: 8px;
   border-right-width: 8px;
   top: -4px;
@@ -107,7 +107,7 @@ html,body{
 .timeline .hexa:after {
   border-left-width: 8px;
   border-right-width: 8px;
-  border-top: 4px solid #00c4f3;
+  border-top: 4px solid #2980b9;
   bottom: -4px;
 }
 
