--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ html,body{
 }
 /*--- Header Part Starts Her ---*/
 .header{
-	background:url(../images/banner.jpg)no-repeat;
+	background:url(../images/banner_1.jpg)no-repeat;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -947,6 +947,13 @@ i.twit{
 	padding:2em 0;
 	text-align:center;
 }
+.skills p{
+	font-size:18px;
+	font-weight:400;
+	color:#7f8a90;
+	margin:1em 0;
+}
+
 .contact-top p{
 	font-size:18px;
 	font-weight:400;
